--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1341,7 +1341,7 @@
    "id": "c6829647",
    "metadata": {},
    "source": [
-    "## cleaning & filtering"
+    "## Cleaning & Filtering"
    ]
   },
   {
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "56339d16",
    "metadata": {},
    "outputs": [
@@ -1737,30 +1737,22 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
+    "#zillowdf = pd.read_csv('/Users/yoyo/Desktop/4501/Project/data/zillow_rent_data.csv')\n",
+    "zillowdf = pd.read_csv(\"C:/Users/Yining Zhu/OneDrive/桌面/4004pj/zillow_rent_data.csv\")\n",
     "\n",
-    "# 2. 加载数据\n",
-    "# 使用 Pandas 读取 CSV 文件\n",
-    "df = pd.read_csv('/Users/yoyo/Desktop/4501/Project/data/zillow_rent_data.csv')\n",
+    "zillowdf = zillowdf.drop(['SizeRank','RegionType','StateName','State','City','Metro','CountyName'], axis=1)\n",
+    "zillowdf = zillowdf.set_index('RegionID')\n",
+    "zillowdf.columns = ['ZipCode',*list(map(lambda x:x[:7],df.columns[1:]))]\n",
     "\n",
-    "# 如果数据包含地理信息，可以使用 GeoPandas 读取\n",
-    "# gdf = gpd.read_file('your_geospatial_data.geojson')\n",
+    "def exneg(x):\n",
+    "    if x<0:\n",
+    "        print(\"There is a negativa number!\")\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        return x\n",
     "\n",
-    "# 3. 数据清理\n",
-    "# 处理缺失值\n",
-    "df = df.dropna()\n",
-    "\n",
-    "# 删除不必要的列\n",
-    "df = df.drop(['SizeRank','RegionType','StateName','State','City','Metro','CountyName'], axis=1)\n",
-    "\n",
-    "# 处理异常值\n",
-    "# 例如，将所有负数值替换为 NaN\n",
-    "df[df < 0] = pd.NA\n",
-    "\n",
-    "# 如果使用 GeoPandas，还可以进行地理数据的清理\n",
-    "# 例如，投影转换、几何操作等\n",
-    "\n",
-    "# 打印清理后的数据\n",
-    "df"
+    "zillowdf.iloc[:,1:] = zillowdf.iloc[:,1:].map(exneg)\n",
+    "zillowdf"
    ]
   },
   {
@@ -1886,20 +1878,19 @@
     }
    ],
    "source": [
-    "# 从 Shapefile 文件加载 GeoDataFrame\n",
-    "file_path = '/Users/yoyo/Desktop/4501/Project/data/nyc_zipcodes.shp'\n",
+    "#file_path = '/Users/yoyo/Desktop/4501/Project/data/nyc_zipcodes.shp'\n",
+    "file_path = \"C:/Users/Yining Zhu/OneDrive/桌面/4004pj/nyc_zipcodes/nyc_zipcodes.shp\"\n",
     "gdf = gpd.read_file(file_path)\n",
     "\n",
     "target_srid = \"4326\"\n",
-    "\n",
     "gdf_epsg = gdf.to_crs(epsg=target_srid)\n",
     "# print(gdf.crs)\n",
     "\n",
     "gdf_epsg = gdf_epsg.drop(['BLDGZIP','PO_NAME','POPULATION','AREA','STATE','COUNTY','ST_FIPS','CTY_FIPS','URL','SHAPE_AREA','SHAPE_LEN'], axis=1)\n",
     "\n",
-    "# 处理缺失值\n",
     "gdf_epsg = gdf_epsg.dropna()\n",
-    "\n",
+    "gdf_epsg.columns = ['ZipCode','geometry']\n",
+    "gdf_epsg.index.name = 'ID'\n",
     "gdf_epsg"
    ]
   },
